2004-11-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/changing-defaults.itely (Creating titles):
	add breakbefore variable.

	* lily/paper-book.cc (set_system_penalty): new function. Set
	penalty_ based on breakBefore setting

	* lily/context-specced-music-iterator.cc (construct_children):
	interpret special context id $uniqueContextId 

	* lily/context.cc (create_unique_context): new method. Move
	creation of unique (\new) contexts into interpreting phase. This
	makes

	  foo= \new Staff ..
	  << \foo \foo >>

        produce 2 staves.
	

	* scm/define-music-properties.scm (all-music-properties): add
	quoted-voice-direction

	* ly/music-functions-init.ly: killCues function.

	* scm/music-functions.scm (cue-substitute): move creation of voice
	contexts further to the back. 

2004-11-25  Werner Lemberg  <wl@gnu.org>

	* tex/GNUmakefile ($(outdir)/latin1.enc): Replace `/minus' with
	`/hyphen' in encoding vector to get correct glyph name for EC fonts.

2004-11-24  Erik Sandberg  <ersa9195@student.uu.se>

        * buildscripts/guile-gnome.sh: Fixed typo.

2004-11-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/lexer.ll: add < >  to markup lexer mode (backportme)

	* scripts/abc2ly.py (dump_slyrics): add ord(). 

	* lily/note-heads-engraver.cc (process_music): add shapeNoteStyles
	to regular engraver. 

2004-11-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/feta-bolletjes.mf (triangle): rewrite solfa heads.

2004-11-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/define-markup-commands.scm (fill-line): Typo.

	* buildscripts/guile-gnome.sh (GGVERSION): Build update for 2.7.96
	and newer.

2004-11-22  Erik Sandberg  <ersa9195@student.uu.se>

        * ly/dynamic-scripts-init.ly: Fixed typo.

2004-11-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/feta-bolletjes.mf (overdone_heads): cleanup triangle
	note-head, to have different attachment points for up and down.

	* mf/feta-bolletjes.mf: merge solfa heads into main note heads.
