@@ -412,7 +412,7 @@ withPadding =
 @node Markup programmer interface
 @section Markup programmer interface
 
-@c Please rewrite the second sentence; I don't unѕerstand its meaning. AS
+@c Please rewrite the second sentence; I don't unÑerstand its meaning. AS
 Markups are implemented as special Scheme functions.  When applied with as
 arguments an output definition (@code{\layout} or @code{\paper}),
 and a list of properties and other arguments, produce a Stencil
@@ -506,7 +506,7 @@ In this case, @code{latin1} is the input encoding, which is set with
 the @code{\encoding} command.
 
 When the markup is converted to printable objects (Stencils), the
-raise markup is called as
+@code{raise-markup} function is called as
 
 @example
 (apply raise-markup
