@@ -1,10 +1,10 @@
 \version "2.4.0"
 
 
-applymusic = #(def-music-function (location func music) (procedure? ly:music?)
+applymusic = #(def-music-function (parser location func music) (procedure? ly:music?)
                (func music))
 
-oldaddlyrics = #(def-music-function (location music lyrics) (ly:music? ly:music?)
+oldaddlyrics = #(def-music-function (parser location music lyrics) (ly:music? ly:music?)
 
               (make-music 'LyricCombineMusic 
                           'origin location
@@ -14,46 +14,46 @@ grace = #(def-grace-function startGraceMusic stopGraceMusic)
 acciaccatura = #(def-grace-function startAcciaccaturaMusic stopAcciaccaturaMusic)
 appoggiatura = #(def-grace-function startAppoggiaturaMusic stopAppoggiaturaMusic)
 
-partcombine = #(def-music-function (location part1 part2) (ly:music? ly:music?)
+partcombine = #(def-music-function (parser location part1 part2) (ly:music? ly:music?)
                 (make-part-combine-music (list part1 part2)))
 
-autochange = #(def-music-function (location music) (ly:music?)
+autochange = #(def-music-function (parser location music) (ly:music?)
                (make-autochange-music music))
 
-applycontext = #(def-music-function (location proc) (procedure?)
+applycontext = #(def-music-function (parser location proc) (procedure?)
                  (make-music 'ApplyContext 
                    'origin location
                    'procedure proc))
 
-displayMusic = #(def-music-function (location music) (ly:music?)
+displayMusic = #(def-music-function (parser location music) (ly:music?)
 		 (display-music music)
 		 music)
-applyoutput = #(def-music-function (location proc) (procedure?)
+applyoutput = #(def-music-function (parser location proc) (procedure?)
                 (make-music 'ApplyOutputEvent 
                   'origin location
                   'procedure proc))
 
-breathe = #(def-music-function (location) ()
+breathe = #(def-music-function (parser location) ()
             (make-music 'EventChord 
               'origin location
               'elements (list (make-music 'BreathingSignEvent))))
 
 
-unfoldrepeats = #(def-music-function (location music) (ly:music?)
+unfoldrepeats = #(def-music-function (parser location music) (ly:music?)
 		  (unfold-repeats music))
 
 compressmusic = #(def-music-function
-		  (location fraction music) (number-pair? ly:music?)
+		  (parser location fraction music) (number-pair? ly:music?)
 		  (ly:music-compress music (ly:make-moment (car fraction) (cdr fraction))))
 
 makeClusters = #(def-music-function
-		(location arg) (ly:music?)
+		(parser location arg) (ly:music?)
 		(music-map note-to-cluster arg))
 
 
 removeWithTag = 
 #(def-music-function
-  (location tag music) (symbol? ly:music?)
+  (parser location tag music) (symbol? ly:music?)
   (music-filter
    (lambda (m)
     (let* ((tags (ly:music-property m 'tags))
@@ -62,7 +62,7 @@ removeWithTag =
 	      
 keepWithTag =
 #(def-music-function
-  (location tag music) (symbol? ly:music?)
+  (parser location tag music) (symbol? ly:music?)
   (music-filter
    (lambda (m)
     (let* ((tags (ly:music-property m 'tags))
@@ -79,7 +79,7 @@ keepWithTag =
 
 cueDuring = 
 #(def-music-function
-  (location what dir main-music)
+  (parser location what dir main-music)
   (string? ly:dir? ly:music?)
   (make-music 'QuoteMusic
 	      'element main-music 
@@ -92,7 +92,7 @@ cueDuring =
 
 quoteDuring = #
 (def-music-function
-  (location what main-music)
+  (parser location what main-music)
   (string? ly:music?)
   (make-music 'QuoteMusic
 	      'element main-music
@@ -104,7 +104,7 @@ quoteDuring = #
 
 killCues =
 #(def-music-function
-   (location music)
+   (parser location music)
    (ly:music?)
    (music-map
     (lambda (mus)
